# WasmEdge

./: .gitmodules  CLAUDE.md  CMakeLists.txt  IR_JIT_IMPLEMENTATION.md
.claude/skills/sightglass/: SKILL.md
bench/: wasmedge-strong.suite  wasmedge.suite
cmake/: Helper.cmake
include/executor/: executor.h
include/llvm/: data.h
include/plugin/wasi_logging/: env.h
include/runtime/instance/: function.h
include/vm/: canonical_type_registry.h  ir_builder.h  ir_jit_engine.h  ir_jit_reg_invoke.h  jit_symbol_registry.h  tier2_compiler.h  tier2_manager.h  vm.h
lib/executor/: CMakeLists.txt  helper.cpp
lib/executor/engine/: proxy.cpp
lib/executor/instantiate/: module.cpp
lib/llvm/: compiler.cpp  data.cpp  llvm.h
lib/vm/: CMakeLists.txt  canonical_type_registry.cpp  gen_ir_jit_reg_invoke_autogen.py  ir_builder.cpp  ir_jit_engine.cpp  ir_jit_reg_invoke.cpp  tier2_compiler.cpp  tier2_manager.cpp  vm.cpp
notes/: COMMIT_SUMMARY.md  HotSpot_V8.md  IR_JIT_CHANGES_SUMMARY.md  IR_JIT_imporovement_suggestions.md  IR_bugs.md  LSRA_eviction_bug.md  O0_O1_segfaults.md  O1_bug.md  bugs_frontend.md  bugs_register_allocation.md  bugs_sccp_optimization.md  bugs_x86_code_emission.md  call_indirect_bug.md  current_bug.md  currernt_bug.md  dead_PHI_bug.md  direct_call.md  implementation_plan.md.resolved  improvements_todo.md  ir_compute_live_ranges.md  ir_jit_high-impact_improvements_c8b807c4.plan.md  paper_writing_plan.md  performance.md  phi_node_bug_audit_38bff412.plan.md  pulldown-cmark_bug.md  reg_based_call.md  reg_based_call_doc.md  reg_call_bug.md  regalloc_bug.md  test_commad_cheetsheet.md  tier2_bug.md  tier2_doc.md  use_after_realloc.md  walkthrough.md.resolved  why_original_main_interpreted_before_ffdbbeea.md  x86_load_fusion_bug.md
notes/benchmarking/: direct_call_vs_ir_jit_benchmark.md  reg_call_vs_ir_jit_benchmark.md  sightglass_strong.md  tier2_v2_vs_llvm_jit_benchmark.md  tier2_vs_ir_jit_benchmark.md  tier2_vs_ir_jit_benchmark_strong.md  total_improvement.md
notes/bugs/: bugs_frontend.md  bugs_register_allocation.md  bugs_sccp_optimization.md  bugs_x86_code_emission.md  osr_bugs.md  tier2_bug.md
notes/design_docs/: call_doc.md  osr_doc.md  reg_based_call_doc.md  regular_tier2_vs_osr_difference.md  tier2_doc.md  tier2_v2_doc.md
notes/issues/: caller_driven_promotion.md  direct_call_rust-compression_bug.md  ir_jit_call_improve.md  o1_unreachable_bug.md  osr.md  potential_bugs.md  tier2_improve.md
notes/performance/: blind-sig.md  blind-sig_llvm_gap.md  ctype.md  ed25519.md  random.md  rust-compression.md
test/: CMakeLists.txt
test/ir/: CMakeLists.txt  ir_basic_test.cpp  ir_benchmark_test.cpp  ir_e2e_test.cpp  ir_execution_test.cpp  ir_instruction_test.cpp  ir_integration_test.cpp  run_sightglass_all.sh
test/ir/testdata/: factorial.wasm  factorial.wat  fibonacci.wasm  fibonacci.wat
test/ir/testdata/sightglass/: abort_test.wasm  hashset.stdout.expected  noop.wasm
test/ir/testdata/sightglass-strong/: ORACLE.md  bench_stub.wat  gcc-loops.wasm  hashset.wasm  regex.wasm  richards.wasm  rust-html-rewriter.wasm  shootout-ackermann.stdout.expected  shootout-ctype.stdout.expected  shootout-ed25519.wasm  shootout-fib2.wasm  shootout-heapsort.wasm  shootout-matrix.stdout.expected  shootout-matrix.wasm  shootout-memmove.wasm  shootout-nestedloop.stdout.expected  shootout-random.wasm  shootout-switch.stdout.expected
test/ir/testdata/sightglass-strong/blake3-scalar/: benchmark.wasm
test/ir/testdata/sightglass-strong/blind-sig/: benchmark.wasm
test/ir/testdata/sightglass-strong/bz2/: benchmark.wasm
test/ir/testdata/sightglass-strong/gcc-loops/: benchmark.stdout.expected
test/ir/testdata/sightglass-strong/image-classification/: benchmark.stderr.expected
test/ir/testdata/sightglass-strong/noop/: benchmark.wasm
test/ir/testdata/sightglass-strong/pulldown-cmark/: benchmark.wasm
test/ir/testdata/sightglass-strong/quicksort/: benchmark.stdout.expected  benchmark.wasm
test/ir/testdata/sightglass-strong/rust-compression/: benchmark.wasm
test/ir/testdata/sightglass-strong/rust-json/: benchmark.wasm
test/ir/testdata/sightglass-strong/rust-protobuf/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-ackermann/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-base64/: benchmark.stdout.expected  benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-ctype/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-gimli/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-keccak/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-minicsv/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-nestedloop/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-random/: benchmark.stdout.expected
test/ir/testdata/sightglass-strong/shootout-ratelimit/: benchmark.stdout.expected  benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-seqhash/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-sieve/: benchmark.stdout.expected  benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-switch/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-xblabla20/: benchmark.wasm
test/ir/testdata/sightglass-strong/shootout-xchacha20/: benchmark.wasm
test/ir/testdata/sightglass-strong/sqlite3/: benchmark.stdout.expected
test/ir/testdata/sightglass-strong/tinygo-regex/: benchmark.wasm
tools/: CMakeLists.txt
tools/sightglass_engine/: CMakeLists.txt  README.md  engine.cpp  wasm_bench_config.h
utils/: download_sightglass.sh  run_sightglass_cli_sweep.sh  run_sightglass_sweep.sh  setup_bench_deps.sh  sightglass_json_table.py  sightglass_table.py
